--- a/index.html
+++ b/index.html
@@ -1,5 +1,25 @@
 <!DOCTYPE html>
-<header></header>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Responsive Layout</title>
+<style>
+
+h1 {text-align: center
+}
+
+</style>
+</head>
 <body>
-<h2>Our Menu</h2>
+<h1>Our Menu</h1>
+
+<div class="row">
+  <div class="col-lg-3 col-md-6"><p>Chicken</p></div>
+  <div class="col-lg-3 col-md-6"><p>Beef</p></div>
+  <div class="col-lg-3 col-md-6"><p>Sushi</p></div>
+
+</div>
+
 </body>
+</html>
+
