--- a/index.html
+++ b/index.html
@@ -2,10 +2,54 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Responsive Layout</title>
+<title>My First Assignment</title>
 <style>
 
+/********** Base styles **********/
+* {
+  box-sizing: border-box;
+}
+h1 {
+  margin-bottom: 15px;
+}
+
+
+
 h1 {text-align: center
+}
+
+.col-lg-1 {
+    width: 25%;
+    border: 1px solid black;
+    background-color: #432189;
+    height: 150px;
+    margin-right: auto;
+    margin-left: auto;
+    font-family: Helvetica;
+    color: white;
+    
+}
+
+.col-lg-2 {
+    width: 25%;
+    border: 1px solid black;
+    background-color: #6578D1;
+    height: 150px;
+    margin-right: auto;
+    margin-left: auto;
+    font-family: Helvetica;
+    color: white;
+}
+
+.col-lg-3 {
+    width: 25%;
+    border: 1px solid black;
+    background-color:#38B6FF;
+    height: 150px;
+    margin-right: auto;
+    margin-left: auto;
+    font-family: Helvetica;
+    color: white;
 }
 
 </style>
@@ -14,9 +58,9 @@ h1 {text-align: center
 <h1>Our Menu</h1>
 
 <div class="row">
-  <div class="col-lg-3 col-md-6"><p>Chicken</p></div>
-  <div class="col-lg-3 col-md-6"><p>Beef</p></div>
-  <div class="col-lg-3 col-md-6"><p>Sushi</p></div>
+  <div class="col-lg-1" ><p>Chicken</p></div>
+  <div class="col-lg-2"><p>Beef</p></div>
+  <div class="col-lg-3"><p>Sushi</p></div>
 
 </div>
 
