--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@ h1 {text-align: center
     border: 1px solid black;
     background-color: #432189;
     height: 150px;
-    margin-right: auto;
-    margin-left: auto;
+    display:inline-block;
     font-family: Helvetica;
     color: white;
+    text-align: right top;
     
 }
 
@@ -35,8 +35,7 @@ h1 {text-align: center
     border: 1px solid black;
     background-color: #6578D1;
     height: 150px;
-    margin-right: auto;
-    margin-left: auto;
+    display:inline-block;
     font-family: Helvetica;
     color: white;
 }
@@ -46,8 +45,7 @@ h1 {text-align: center
     border: 1px solid black;
     background-color:#38B6FF;
     height: 150px;
-    margin-right: auto;
-    margin-left: auto;
+    display: inline-block;
     font-family: Helvetica;
     color: white;
 }
@@ -61,6 +59,8 @@ h1 {text-align: center
   <div class="col-lg-1" ><p>Chicken</p></div>
   <div class="col-lg-2"><p>Beef</p></div>
   <div class="col-lg-3"><p>Sushi</p></div>
+
+
 
 </div>
 
