--- a/index.html
+++ b/index.html
@@ -53,17 +53,20 @@ h1 {text-align: center
 </style>
 </head>
 <body>
-<h1>Our Menu</h1>
-
-<div class="row">
-  <div class="col-lg-1" ><p>Chicken</p></div>
-  <div class="col-lg-2"><p>Beef</p></div>
-  <div class="col-lg-3"><p>Sushi</p></div>
-
-
-
-</div>
-
+ <header class="header">
+    <h1>Our Menu</h1>
+  </header>
+  <div class="section">
+    <h2 class="section-title">Chicken</h2>
+    <p class="section-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  </div>
+  <div class="section">
+    <h2 class="section-title">Beef</h2>
+    <p class="section-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  </div>
+  <div class="section">
+    <h2 class="section-title">Sushi</h2>
+    <p class="section-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  </div>
 </body>
 </html>
-
