--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="utf-8">
 <title>My First Assignment</title>
 <style>
-
 /* Reset some default styles */
 body, h1, h2, p {
   margin: 0;
@@ -24,6 +23,7 @@ body {
   float: left;
   width: 100%; /* Default to full width */
   position: relative; /* Position for section titles */
+  margin: 10px; /* Add spacing between containers */
 }
 
 /* Section title styles */
@@ -31,7 +31,6 @@ body {
   position: absolute;
   top: 10px;
   right: 10px;
-  background-color: #F00; /* Example color for section title */
   color: white;
   padding: 5px 10px;
   font-size: 14px;
@@ -41,6 +40,19 @@ body {
 .header {
   text-align: center;
   padding: 20px;
+}
+
+/* Container background colors */
+.section:nth-child(1) {
+  background-color: #F00; /* Red */
+}
+
+.section:nth-child(2) {
+  background-color: #0F0; /* Green */
+}
+
+.section:nth-child(3) {
+  background-color: #00F; /* Blue */
 }
 
 /* Responsive layout */
@@ -57,26 +69,3 @@ body {
   }
   .section:last-child {
     width: 100%;
-    clear: none; /* Prevent clearing for the last section */
-  }
-}
-</style>
-</head>
-<body>
- <header class="header">
-    <h1>Our Menu</h1>
-  </header>
-  <div class="section">
-    <h2 class="section-title">Chicken</h2>
-    <p class="section-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-  </div>
-  <div class="section">
-    <h2 class="section-title">Beef</h2>
-    <p class="section-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-  </div>
-  <div class="section">
-    <h2 class="section-title">Sushi</h2>
-    <p class="section-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-  </div>
-</body>
-</html>
