--- a/index.html
+++ b/index.html
@@ -1,71 +1,95 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>My First Assignment</title>
-<style>
-/* Reset some default styles */
-body, h1, h2, p {
-  margin: 0;
-  padding: 0;
-}
+  <meta charset="utf-8">
+  <title>My First Assignment</title>
+  <style>
+    /* Reset some default styles */
+    body, h1, h2, p {
+      margin: 0;
+      padding: 0;
+    }
 
-/* Basic styles */
-body {
-  font-family: Arial, sans-serif;
-}
+    /* Basic styles */
+    body {
+      font-family: Arial, sans-serif;
+    }
 
-/* Common section styles */
-.section {
-  border: 1px solid black;
-  padding: 20px;
-  box-sizing: border-box;
-  float: left;
-  width: 100%; /* Default to full width */
-  position: relative; /* Position for section titles */
-  margin: 10px; /* Add spacing between containers */
-}
+    /* Common section styles */
+    .section {
+      border: 1px solid black;
+      padding: 20px;
+      box-sizing: border-box;
+      float: left;
+      width: 100%; /* Default to full width */
+      position: relative; /* Position for section titles */
+      margin: 10px; /* Add spacing between containers */
+    }
 
-/* Section title styles */
-.section-title {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  color: white;
-  padding: 5px 10px;
-  font-size: 14px;
-}
+    /* Section title styles */
+    .section-title {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      color: white;
+      padding: 5px 10px;
+      font-size: 14px;
+    }
 
-/* Header styles */
-.header {
-  text-align: center;
-  padding: 20px;
-}
+    /* Header styles */
+    .header {
+      text-align: center;
+      padding: 20px;
+    }
 
-/* Container background colors */
-.section:nth-child(1) {
-  background-color: #F00; /* Red */
-}
+    /* Container background colors */
+    .section:nth-child(1) {
+      background-color: #F00; /* Red */
+    }
 
-.section:nth-child(2) {
-  background-color: #0F0; /* Green */
-}
+    .section:nth-child(2) {
+      background-color: #0F0; /* Green */
+    }
 
-.section:nth-child(3) {
-  background-color: #00F; /* Blue */
-}
+    .section:nth-child(3) {
+      background-color: #00F; /* Blue */
+    }
 
-/* Responsive layout */
-@media (min-width: 992px) {
-  .section {
-    width: 33.33%;
-  }
-}
+    /* Responsive layout */
+    @media (min-width: 992px) {
+      .section {
+        width: 33.33%;
+      }
+    }
 
-@media (min-width: 768px) and (max-width: 991px) {
-  .section {
-    width: 50%;
-    clear: both; /* Start new row */
-  }
-  .section:last-child {
-    width: 100%;
+    @media (min-width: 768px) and (max-width: 991px) {
+      .section {
+        width: 50%;
+        clear: both; /* Start new row */
+      }
+      .section:last-child {
+        width: 100%;
+        clear: none; /* Prevent clearing for the last section */
+      }
+    }
+  </style>
+</head>
+<body>
+  <header class="header">
+    <h1>Our Menu</h1>
+  </header>
+  <div class="section">
+    <h2 class="section-title">Chicken</h2>
+    <p class="section-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  </div>
+  <div class="section">
+    <h2 class="section-title">Beef</h2>
+    <p class="section-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  </div>
+  <div class="section">
+    <h2 class="section-title">Sushi</h2>
+    <p class="section-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  </div>
+</body>
+</html>
+
